--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           <h2 class="visually-hidden">Our Mottos</h2>
           <ul class="motto-lists">
             <li class="motto-list-items">
+              <div class="motto-icon-container">
+                <svg class="motto-icon-item">
+                  <use xlink:href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="heading">Strategy</h3>
               <p class="paragraph">
                 Our goal is to identify the business problem to walk away with
@@ -80,6 +85,11 @@
               </p>
             </li>
             <li class="motto-list-items">
+              <div class="motto-icon-container">
+                <svg class="motto-icon-item">
+                  <use xlink:href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="heading">Punctuality</h3>
               <p class="paragraph">
                 Bring the key message to the brand's audience for the best price
@@ -87,6 +97,11 @@
               </p>
             </li>
             <li class="motto-list-items">
+              <div class="motto-icon-container">
+                <svg class="motto-icon-item">
+                  <use xlink:href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="heading">Diligence</h3>
               <p class="paragraph">
                 Research and confirm brands with the strongest digital growth
@@ -94,6 +109,11 @@
               </p>
             </li>
             <li class="motto-list-items">
+              <div class="motto-icon-container">
+                <svg class="motto-icon-item">
+                  <use xlink:href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="heading">Technologies</h3>
               <p class="paragraph">
                 Design practice focused on digital experiences. We bring forth a
@@ -120,6 +140,36 @@
               <div class="members-box">
                 <h3 class="team-member">Mark Guerrero</h3>
                 <p class="tittle">Product Designer</p>
+                <div class="member-social-container">
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-instagram_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-twitter_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-facebook_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-linkedin_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="members">
@@ -132,6 +182,36 @@
               <div class="members-box">
                 <h3 class="team-member">Tom Ford</h3>
                 <p class="tittle">Frontend Developer</p>
+                <div class="member-social-container">
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-instagram_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-twitter_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-facebook_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-linkedin_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="members">
@@ -144,6 +224,36 @@
               <div class="members-box">
                 <h3 class="team-member">Camila Garcia</h3>
                 <p class="tittle">Marketing</p>
+                <div class="member-social-container">
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-instagram_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-twitter_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-facebook_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-linkedin_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="members">
@@ -156,6 +266,36 @@
               <div class="members-box">
                 <h3 class="team-member">Daniel Wilson</h3>
                 <p class="tittle">UI Designer</p>
+                <div class="member-social-container">
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-instagram_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-twitter_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-facebook_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                  <a href="" class="member-icon-item">
+                    <svg>
+                      <use
+                        xlink:href="./images/icons.svg#icon-linkedin_svg"
+                      ></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
@@ -244,14 +384,41 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo" href="./index.html">
-          Web<span class="studio-white">Studio</span>
-        </a>
-        <p class="info">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-site-info">
+          <a class="logo" href="./index.html">
+            Web<span class="studio-white">Studio</span>
+          </a>
+          <p class="info">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-site-social">
+          <h3>Social Media</h3>
+          <div class="footer-site-social-container">
+            <a href="" class="footer-social-icon-item">
+              <svg>
+                <use xlink:href="./images/icons.svg#icon-instagram_svg"></use>
+              </svg>
+            </a>
+            <a href="" class="footer-social-icon-item">
+              <svg>
+                <use xlink:href="./images/icons.svg#icon-twitter_svg"></use>
+              </svg>
+            </a>
+            <a href="" class="footer-social-icon-item">
+              <svg>
+                <use xlink:href="./images/icons.svg#icon-facebook_svg"></use>
+              </svg>
+            </a>
+            <a href="" class="footer-social-icon-item">
+              <svg>
+                <use xlink:href="./images/icons.svg#icon-linkedin_svg"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
