--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <ul class="motto-lists">
             <li class="motto-list-items">
               <div class="motto-icon-container">
-                <svg class="motto-icon-item">
-                  <use xlink:href="./images/icons.svg#icon-antenna"></use>
+                <svg class="motto-icon-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="heading">Strategy</h3>
@@ -86,8 +86,8 @@
             </li>
             <li class="motto-list-items">
               <div class="motto-icon-container">
-                <svg class="motto-icon-item">
-                  <use xlink:href="./images/icons.svg#icon-clock"></use>
+                <svg class="motto-icon-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="heading">Punctuality</h3>
@@ -98,8 +98,8 @@
             </li>
             <li class="motto-list-items">
               <div class="motto-icon-container">
-                <svg class="motto-icon-item">
-                  <use xlink:href="./images/icons.svg#icon-diagram"></use>
+                <svg class="motto-icon-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="heading">Diligence</h3>
@@ -110,8 +110,8 @@
             </li>
             <li class="motto-list-items">
               <div class="motto-icon-container">
-                <svg class="motto-icon-item">
-                  <use xlink:href="./images/icons.svg#icon-astronaut"></use>
+                <svg class="motto-icon-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="heading">Technologies</h3>
