--- a/index.html
+++ b/index.html
@@ -395,28 +395,44 @@
           </p>
         </div>
         <div class="footer-site-social">
-          <h3>Social Media</h3>
+          <p class="footer-social-text">Social Media</p>
           <div class="footer-site-social-container">
-            <a href="" class="footer-social-icon-item">
-              <svg>
-                <use xlink:href="./images/icons.svg#icon-instagram_svg"></use>
-              </svg>
-            </a>
-            <a href="" class="footer-social-icon-item">
-              <svg>
-                <use xlink:href="./images/icons.svg#icon-twitter_svg"></use>
-              </svg>
-            </a>
-            <a href="" class="footer-social-icon-item">
-              <svg>
-                <use xlink:href="./images/icons.svg#icon-facebook_svg"></use>
-              </svg>
-            </a>
-            <a href="" class="footer-social-icon-item">
-              <svg>
-                <use xlink:href="./images/icons.svg#icon-linkedin_svg"></use>
-              </svg>
-            </a>
+            <ul>
+              <li>
+                <a href="" class="footer-social-icon-item">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use
+                      href="./images/icons.svg#icon-instagram_svg"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="footer-social-icon-item">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter_svg"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="footer-social-icon-item">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use
+                      href="./images/icons.svg#icon-facebook_svg"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="" class="footer-social-icon-item">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use
+                      href="./images/icons.svg#icon-linkedin_svg"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
