fix: footer css

--- a/index.html
+++ b/index.html
@@ -395,43 +395,37 @@
           </p>
         </div>
         <div class="footer-site-social">
-          <p class="footer-social-text">Social Media</p>
-            <ul>
-              <li>
-                <a href="" class="footer-social-icon-item">
-                  <svg class="footer-social-icon" width="24" height="24">
-                    <use
-                      href="./images/icons.svg#icon-instagram_svg"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="footer-social-icon-item">
-                  <svg class="footer-social-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter_svg"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="footer-social-icon-item">
-                  <svg class="footer-social-icon" width="24" height="24">
-                    <use
-                      href="./images/icons.svg#icon-facebook_svg"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="footer-social-icon-item">
-                  <svg class="footer-social-icon" width="24" height="24">
-                    <use
-                      href="./images/icons.svg#icon-linkedin_svg"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-site-social-order">
+            <li class="footer-site-social-list">
+              <a href="" class="footer-social-icon-item">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram_svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-site-social-list">
+              <a href="" class="footer-social-icon-item">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter_svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-site-social-list">
+              <a href="" class="footer-social-icon-item">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook_svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-site-social-list">
+              <a href="" class="footer-social-icon-item">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin_svg"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
